Fix h2 alignment

--- a/scss/partials/_titles.scss
+++ b/scss/partials/_titles.scss
@@ -8,6 +8,7 @@ h2{
   font-size: 30px;
   letter-spacing: 4px;
   text-transform: uppercase;
+  text-align: center;
 }
 
 h3{
